cli/tests/testdata/run/worker_drop_handle_race.js.out
error: Uncaught (in worker "") Error
  throw new Error();
        ^
    at [WILDCARD]/workers/drop_handle_race.js:2:9
    at Object.action (ext:deno_web/02_timers.js:[WILDCARD])
    at handleTimerMacrotask (ext:deno_web/02_timers.js:[WILDCARD])
error: Uncaught (in promise) Error: Unhandled error in child worker.
    at Worker.#pollControl (ext:runtime/11_workers.js:[WILDCARD])
    at eventLoopTick (ext:core/01_core.js:[WILDCARD])
